force-app/main/default/objects/DML_Orchestrator__mdt/DML_Orchestrator__mdt.object-meta.xml
<CustomObject>
    <description>Orchestrating the DMLs on sobjects based on service</description>
    <label>DML Orchestrator</label>
    <pluralLabel>DML Orchestrator</pluralLabel>
</CustomObject>