force-app/main/default/objects/DML_Orchestrator__mdt/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>External Id field to consider on objects</description>
    <label>External ID</label>
    <metadataRelationshipControllingField>DML_Orchestrator__mdt.SObject__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>Reltio_DML_Orchestrator</relationshipLabel>
    <relationshipName>Reltio_DML_Orchestrator</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>