force-app/main/default/objects/DML_Orchestrator__mdt/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Ranking used for DML Orchestration</description>
    <label>Ranking</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>