force-app/main/default/objects/DML_Orchestrator__mdt/fields/Reltio_CM_Process__c.field-meta.xml
<CustomField>
    <fullName>Reltio_CM_Process__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Related Customer Master Process name</description>
    <label>Reltio CM Process</label>
    <referenceTo>Reltio_CM_Process__mdt</referenceTo>
    <relationshipLabel>DML Orchestrator</relationshipLabel>
    <relationshipName>Reltio_DML_Orchestrator</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>