force-app/main/default/objects/DML_Orchestrator__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Object Name</description>
    <label>SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Reltio_DML_Orchestrator</relationshipLabel>
    <relationshipName>Reltio_DML_Orchestrator</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>