force-app/main/default/objects/DML_Orchestrator__mdt/listViews/DML.listView-meta.xml
<ListView>
    <fullName>DML</fullName>
    <columns>DeveloperName</columns>
    <columns>Reltio_CM_Process__c</columns>
    <columns>Ranking__c</columns>
    <columns>SObject__c</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>notEqual</operation>
    </filters>
    <label>DML</label>
</ListView>